[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://environment/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/Boundary.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/UI.tscn" type="PackedScene" id=5]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

z_index = -5
_sections_unfolded = [ "Z Index" ]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 512, 512 )
z_index = 0
_sections_unfolded = [ "Collision", "Z Index", "collision" ]

[node name="LeftBoundary" parent="." index="2" instance=ExtResource( 4 )]

_sections_unfolded = [ "Collision" ]

[node name="RightBoundary" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 1024, 256 )
_sections_unfolded = [ "Transform" ]

[node name="UI" parent="." index="4" instance=ExtResource( 5 )]

[node name="SpawnPositionRight" type="Position2D" parent="." index="5"]

position = Vector2( 768, -256 )

[node name="SpawnPositionCenter" type="Position2D" parent="." index="6"]

position = Vector2( 512, -256 )

[node name="SpawnPositionLeft" type="Position2D" parent="." index="7"]

position = Vector2( 256, -256 )

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 2.5
one_shot = false
autostart = false

[connection signal="died" from="Player" to="." method="_on_Player_died"]

[connection signal="health_changed" from="Player" to="UI" method="_on_Player_health_changed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


